included alerts and bs_icons

--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/head') %>
 <body>
     <%- include('partials/navbar') %>
+    
     <div class="container primary-wrapper">
+        <%- include('partials/flashMessage') %>
         <div class="notes">
             <% if (user){ %>
                 <div class="headline">
