--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .alert {
-    margin-top: 10px;
+    margin-top: 5%;
 }
 
 .alert-close {
@@ -111,13 +111,12 @@ body {
 }
 
 .form-group {
-    margin: 5% auto;
+    margin: 10% auto;
     max-width: 500px;
     padding: 20px;
     background: linear-gradient(to right, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 77%, rgba(255, 255, 255, 0.3) 92%, rgba(255, 255, 255, 0.3) 100%), linear-gradient(to top, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 77%, rgba(255, 255, 255, 0.3) 92%, rgba(255, 255, 255, 0.3) 100%); 
     border: 2px solid whitesmoke;
     border-radius: 5px;
-
 }
 
 form .form-control:focus {
@@ -238,6 +237,7 @@ form .form-control:focus {
 
 
 @media (max-width: 450px){
+    
     .headline {
         display: grid;
         align-items: center;
