refactored for services

--- a/public/views/homepage.ejs
+++ b/public/views/homepage.ejs
@@ -1,7 +1,16 @@
 <%- include('partials/head') %>
-    <body>
-        <div class="container">
-            <h1>Landing Page</h1>
+    <body style="background: white;">
+        <div class="container primary-wrapper">
+            <div class="intro">
+                <div>
+                    <img src="https://res.cloudinary.com/dnncez2l8/image/upload/v1681578092/stock_images/pexels-jeshootscom-442574_dqoq5z.jpg" alt="landing page image">
+                </div>
+                <div class="intro-desc">
+                    <h2 ><span class="redish">Quick</span> Notes</h2>
+                    <p>Carry your notes with you whereever you go as long you're connected to the internet. With markdown support, making neat tidy notes should be a delight</p>
+                    <a href="/api/users/login" class="btn btn-outline-primary">Get Started</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
