--- a/public/views/partials/form_fields.ejs
+++ b/public/views/partials/form_fields.ejs
@@ -4,8 +4,8 @@
             <input type="text" name="title" value="<%= note.title %>" id="title" class="form-control" placeholder="Title" required>
         </div>
         <div>
-            <label for="note">note:</label>
-            <textarea name="note" id="note-field" class="form-control" required><%= note.body %></textarea>
+            <label for="body">note:</label>
+            <textarea name="body" id="note-field" class="form-control" required><%= note.body %></textarea>
         </div>
         <div>
             <button id="cancel-btn" class="btn btn-outline-secondary">cancel</button>
