--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
     scroll-behavior: smooth;
     background: no-repeat center center; 
     background-size: cover;
-    background-image: url('https://res.cloudinary.com/dnncez2l8/image/upload/v1681515329/stock_images/pexels-karolina-grabowska-5477706_omszuk.jpg');   
+    background-image: url('https://res.cloudinary.com/dnncez2l8/image/upload/v1681515329/stock_images/pexels-karolina-grabowska-5477706_omszuk.jpg');
 }
 
 .redish {
@@ -13,7 +13,7 @@ body {
 .primary-wrapper h1 {
     font-size: 7.5em;
     margin: 15px 0px;
-    font-weight:bold;
+    font-weight: bold;
 }
 
 .primary-wrapper {
@@ -21,7 +21,7 @@ body {
 }
 
 .intro {
-    height: 100%;
+    margin-top: 5%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
@@ -31,10 +31,6 @@ body {
 .intro img {
     width: 80%;
     height: 80%;
-}
-
-.intro h2 {
-    font-size: 2.5em;
 }
 
 .alert {
@@ -203,6 +199,7 @@ form .form-control:focus {
     text-decoration: none;
     Color: black;
 }
+
 .note a:hover {
     color: black;
 }
@@ -248,6 +245,22 @@ form .form-control:focus {
     margin-top: 10px;
 }
 
+footer {
+    background-color: rgb(232, 232, 232);;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;  
+}
+
+footer a {
+    text-decoration: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 4px;
@@ -272,12 +285,13 @@ form .form-control:focus {
 }
 
 
-@media (max-width: 450px){
+@media (max-width: 480px){
 
     .intro {
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 0.7fr;
         grid-template-columns: 1fr;
         align-items: center;
+        margin-bottom: auto;
     }
 
     .intro-desc {
@@ -286,16 +300,9 @@ form .form-control:focus {
 
     .intro img {
         height: 100%;
-        width: 100%;
-        
+        width: 100%;  
     }
-    
-    .headline {
-        display: grid;
-        align-items: center;
-        grid-template-columns: 0.8fr 0.2fr;
-        grid-template-rows: 1fr 1fr;
-    }
+
 
     .search-bar {
         margin-left: 0;
@@ -312,3 +319,23 @@ form .form-control:focus {
     }
    
 }
+
+@media (min-width: 481px) and (max-width: 1024px){
+    .intro {
+        grid-template-rows: 1fr 0.5fr;
+        grid-template-columns: 1fr;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .intro-desc {
+        align-self: flex-start;
+    }
+
+    .intro img {
+        height: 100%;
+        width: 100%;   
+    }
+
+}
+
