--- a/public/views/homepage.ejs
+++ b/public/views/homepage.ejs
@@ -23,7 +23,7 @@
               <img src="https://res.cloudinary.com/dnncez2l8/image/upload/v1683629927/note_illustration_mflzlh.jpg">
           </div>
           <div class="intro-desc">
-              <h2 ><span class="redish">Quick</span> Notes</h2>
+              <h2 ><span class="redish">Marked</span> Notes</h2>
               <p>Carry your notes with you whereever you go as long you're connected to the internet. With markdown support, making neat tidy notes should be a delight</p>
               <a href="/api/users/login" class="btn btn-outline-primary">Get Started</a>
           </div>
