--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -3,7 +3,7 @@
 <body>
     <div class="container primary-wrapper">
         <%- include('partials/flashMessage') %>
-        <div class="form-group">
+        <div class="form-group login-form">
             <form action="login" method="POST">
                 <h4>Login</h4>
                 <div class="form-item mb-3">
