--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,6 +308,13 @@ footer a {
     }
 
 
+    .headline {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 0.8fr 0.2fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
     .search-bar {
         margin-left: 0;
         margin-top: 5px;
